--- a/10-kubernetes/homework.ipynb
+++ b/10-kubernetes/homework.ipynb
@@ -120,7 +120,9 @@
     "* Node\n",
     "* Pod\n",
     "* Deployment\n",
-    "* Service"
+    "* Service\n",
+    "\n",
+    "**Answer: Pod**"
    ]
   },
   {
@@ -138,7 +140,9 @@
     "* NodePort\n",
     "* ClusterIP\n",
     "* ExternalName\n",
-    "* LoadBalancer"
+    "* LoadBalancer\n",
+    "\n",
+    "**Answer: ClusterIP**"
    ]
   },
   {
@@ -156,7 +160,9 @@
     "* `kind create cluster`\n",
     "* `kind build node-image`\n",
     "* `kind load docker-image`\n",
-    "* `kubectl apply`"
+    "* `kubectl apply`\n",
+    "\n",
+    "**Answer: `kind load docker-image`**"
    ]
   },
   {
@@ -202,7 +208,9 @@
     "What is the value for `<Port>`?\n",
     "\n",
     "Apply this deployment using the appropriate command and get a list of running Pods. \n",
-    "You can see one running Pod."
+    "You can see one running Pod.\n",
+    "\n",
+    "**Answer: 8080**"
    ]
   },
   {
@@ -318,12 +326,6 @@
     "> Note: It may take a few minutes to stabilize the number of replicas. Since the amount of load is not controlled \n",
     "> in any way it may happen that the final number of replicas will differ from initial."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40ac15c0",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
