--- a/10-kubernetes/homework.ipynb
+++ b/10-kubernetes/homework.ipynb
@@ -240,7 +240,14 @@
     "\n",
     "Apply this config file.\n",
     "\n",
-    "\n",
+    "**Answer: subscription**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35ce684",
+   "metadata": {},
+   "source": [
     "## Testing the service\n",
     "\n",
     "We can test our service locally by forwarding the port 9696 on our computer \n",
